--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .formWrapper {
-    background: #282a36;
+    background: #1e1f24;
     padding: 20px;
     border-radius: 10px;
     width: 400px;
@@ -61,14 +61,14 @@ footer a {
 
 .joinBtn,
 .leaveBtn {
-    background: #4aed88;
+    background: #082bdb;
     width: 100px;
     margin-left: auto;
 }
 
 .joinBtn:hover,
 .leaveBtn:hover {
-    background: #2b824c;
+    background: #4720d4;
 }
 
 .createInfo {
@@ -77,9 +77,9 @@ footer a {
 }
 
 .createNewBtn {
-    color: #4aed88;
+    color: #2f2fe3;
     text-decoration: none;
-    border-bottom: 1px solid #4aed88;
+    border-bottom: 1px solid #6285cf;
     transition: all 0.3s ease-in-out;
 }
 
