--- a/src/App.css
+++ b/src/App.css
@@ -70,14 +70,14 @@
 }
 
 .createNewBtn {
-    color: #cfef1b;
+    color: #2f2fe3;
     text-decoration: none;
     border-bottom: 1px solid #6285cf;
     transition: all 0.3s ease-in-out;
 }
 
 .createNewBtn:hover{
-    color: #40406e;
+    
 }
 
 
