--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@
 }
 
 .createNewBtn {
-    color: #15e148;
+    color: #155ce1;
     text-decoration: none;
     border-bottom: 1px solid #6285cf;
     transition: all 0.3s ease-in-out;
